# recsys-2025-personalization

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
frontend/: app.js  index.html  styles.css
scripts/: open-local-uis.sh  start-local.sh
sql/: clickhouse_schema.sql
src/recsys_personalization/: api.py  cli.py  clickhouse.py  config.py  download.py  features.py  metrics.py  personalization.py
src/recsys_personalization/evaluation/: __init__.py  benchmark.py  ranking.py
src/recsys_personalization/models/: __init__.py  alternating_least_squares.py  base.py  bayesian_personalized_ranking.py  factorization_machine.py  item_nearest_neighbors.py  lightgbm_ranker.py  matrix_factorization.py  popularity.py
src/recsys_personalization/training/: __init__.py  train_alternating_least_squares.py  train_bayesian_personalized_ranking.py  train_factorization_machine.py  train_item_nearest_neighbors.py  train_lightgbm_ranker.py  train_matrix_factorization.py  train_popularity.py
tests/: test_features.py  test_metrics.py  test_models.py  test_personalization.py
